# apprentice-mgmt-api

./: .gitignore  Makefile  pyproject.toml
api/v1/projects/: urls.py
api/v1/user/: urls.py
apps/core/: permissions.py
apps/feedback/: models.py
apps/feedback/api/v1/: urls.py  (+2 more)
apps/feedback/migrations/: 0001_initial.py  0002_initial.py
apps/projects/: admin.py  models.py
apps/projects/migrations/: 0001_initial.py  0002_initial.py  0003_apprenticeproject_mentorproject.py  0004_remove_apprenticeproject_apprentice_and_more.py  0005_delete_apprenticeproject_delete_mentorproject.py
apps/request/: admin.py  models.py
apps/request/migrations/: 0001_initial.py  0002_initial.py  0003_apprenticeremovalrequest_mentorleaverequest_and_more.py
apps/rotation/: admin.py  apps.py  models.py
apps/rotation/migrations/: 0001_initial.py  0002_initial.py  0003_remove_apprenticerotation_created_at_and_more.py
apps/tasks/: models.py
apps/tasks/migrations/: 0001_initial.py  0002_initial.py  0003_rename_mentor_task_assigned_by_and_more.py
apps/user/: admin.py  models.py
apps/user/migrations/: 0001_initial.py  0002_remove_apprentice_project_remove_mentor_project_and_more.py  (+2 more)
config/: settings.py  urls.py
projects/: models.py  serializers.py  views.py
projects/migrations/: 0002_alter_project_end_date_alter_project_start_date.py
request/: models.py
rotation/migrations/: 0001_initial.py
tasks/migrations/: 0001_initial.py
user/: admin.py  models.py  permissions.py  serializers.py  tests.py  views.py
user/migrations/: 0001_initial.py  0002_alter_user_managers.py
(+13 files in other folders)
